syntax = "proto3";
package blob_storage;

service BlobStorage {
  rpc Store(StoreRequest) returns (Empty);
  rpc Retrieve(RetrieveRequest) returns (RetrieveResponse);
}

message StoreRequest {
  string object_id = 1;
  bytes data = 2;
}

message RetrieveRequest {
  string object_id = 1;
}

message RetrieveResponse {
  bytes data = 1;
}

message Empty {}
